--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website!</h2>
+			<h2>Welcome to our website! tercer commit</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
