--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="description" content="Servicio técnico especializado para celulares. Contamos con profesionales y equipos con la mas alta tecnología para dejar su móvil como nuevo">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
-	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Pregnancy</title>
 </head>
@@ -25,7 +24,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! tercer commit</h2>
+			<h2>Welcome to our website! cuarto commit</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -39,20 +38,30 @@
 					</article>
 				</div>
 				<div class="col-md-3">
-					<article>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-						<a href="btn btn-primary">Leer Más</a>
-					</article>
+					<div>
+						<img src="http://via.placeholder.com/350x150">
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="content-image">
-			<img src="http://via.placeholder.com/350x150">
+			<img src="http://via.placeholder.com/1200x200" width="100%">
 		</div>
 	</section>
 	<!-- End Section Home Two -->
+	<!-- Section Home Three -->
+	<section class="section-home-three">
+		<div class="container">
+			<h2>Latest from the blog</h2>
+			<div class="row">
+				<div class="col-md-3"></div>
+				<div class="col-md-3"></div>
+				<div class="col-md-3"></div>
+				<div class="col-md-3"></div>
+			</div>
+		</div>
+	</section>
+	<!-- End Section Home Three -->
 	
 </body>
 </html>
