--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Servicio técnico especializado para celulares. Contamos con profesionales y equipos con la mas alta tecnología para dejar su móvil como nuevo">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Pregnancy</title>
 </head>
@@ -25,7 +25,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! cuarto commit</h2>
+			<h2>Welcome to our website! commit 8</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
