--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Servicio técnico especializado para celulares. Contamos con profesionales y equipos con la mas alta tecnología para dejar su móvil como nuevo">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
-	
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Pregnancy</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 12</h2>
+			<h2>Welcome to our website! commit 13</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
