--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 14</h2>
+			<h2>Welcome to our website! commit 15</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -62,6 +62,6 @@
 		</div>
 	</section>
 	<!-- End Section Home Three -->
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
