--- a/index.html
+++ b/index.html
@@ -6,25 +6,23 @@
 	<meta name="description" content="Servicio técnico especializado para celulares. Contamos con profesionales y equipos con la mas alta tecnología para dejar su móvil como nuevo">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Pregnancy</title>
 </head>
 <body>
 	<header>
 		<!--  Navigation -->
-		<!-- End Navigation -->
 	</header>
 
 	<!-- Section Home One -->
 	<section class="section-home-one">
 		
 	</section>
-	<!-- End Section Home One -->
-
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 15</h2>
+			<h2>Welcome to our website! commit 16</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -48,7 +46,6 @@
 			<img src="http://via.placeholder.com/1200x200" width="100%">
 		</div>
 	</section>
-	<!-- End Section Home Two -->
 	<!-- Section Home Three -->
 	<section class="section-home-three">
 		<div class="container">
@@ -61,7 +58,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- End Section Home Three -->
+	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
