--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 18</h2>
+			<h2>Welcome to our website! commit 19</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -58,5 +58,6 @@
 	</section>
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
