--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<meta name="description" content="Servicio técnico especializado para celulares. Contamos con profesionales y equipos con la mas alta tecnología para dejar su móvil como nuevo">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
-	<!-- Scripts Javascripts-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="preload" media="screen" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
 	<title>Pregnancy</title>
 </head>
 <body>
@@ -23,7 +21,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 20</h2>
+			<h2>Welcome to our website! commit 21</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -59,5 +57,8 @@
 			</div>
 		</div>
 	</section>
+	<!-- Scripts Javascripts-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
