--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
 	<link rel="preload" media="screen" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
+	<noscript>
+    	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  	</noscript>
+ 	<link rel="preload" media="screen" as="style" href="css/style.css" onload="this.rel='stylesheet'"/>
+	<noscript>
+    	<link href="css/style.css" rel="stylesheet" media="screen">
+  	</noscript>
 	<title>Pregnancy</title>
 </head>
 <body>
@@ -21,7 +28,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 21</h2>
+			<h2>Welcome to our website! commit 22</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
