--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 22</h2>
+			<h2>Welcome to our website! commit 23</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -57,10 +57,58 @@
 		<div class="container">
 			<h2>Latest from the blog</h2>
 			<div class="row">
-				<div class="col-md-3"></div>
-				<div class="col-md-3"></div>
-				<div class="col-md-3"></div>
-				<div class="col-md-3"></div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Section Home Four -->
+	<section class="section-home-four">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 offset-md-1">
+					<h4> Lorem ipsum dolor sit amet, consecr adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes</h4>
+					<h5>AMANDA RICHARDSON</h5>
+					<p>A Physician at “Fusce suscipit” Hospital. Cum sociis natoque penatibus et magnis dis parturient montes....</p>
+				</div>
 			</div>
 		</div>
 	</section>
