--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
-	<title>Pregnancy</title>
+	<title>Pregnancy commit 24</title>
 </head>
 <body>
 	<header>
@@ -26,9 +26,9 @@
 		
 	</section>
 	<!-- Section Home Two -->
-	<section class="section-home-two">
+	<section class="section section-home-two">
 		<div class="container">
-			<h2>Welcome to our website! commit 23</h2>
+			<h2>Welcome to our website!</h2>
 			<div class="row">
 				<div class="col-md-9">
 					<article>
@@ -42,18 +42,18 @@
 					</article>
 				</div>
 				<div class="col-md-3">
-					<div>
-						<img src="http://via.placeholder.com/350x150">
+					<div class="content-image">
+						<img src="http://via.placeholder.com/150x150">
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="content-image">
-			<img src="http://via.placeholder.com/1200x200" width="100%">
+		<div class="full-content-image">
+			<img src="img/section-home-one-full-image.jpg">
 		</div>
 	</section>
 	<!-- Section Home Three -->
-	<section class="section-home-three">
+	<section class="section section-home-three">
 		<div class="container">
 			<h2>Latest from the blog</h2>
 			<div class="row">
@@ -101,7 +101,7 @@
 		</div>
 	</section>
 	<!-- Section Home Four -->
-	<section class="section-home-four">
+	<section class="section section-home-four">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 offset-md-1">
