--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
-	<title>Pregnancy commit 26</title>
+	<title>Pregnancy commit 27</title>
 </head>
 <body>
 	<header>
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 		<div class="full-content-image">
-			<img src="http://via.placeholder.com/1200x150">
+			<img src="img/section-home-one-full-image.jpg">
 		</div>
 	</section>
 	<!-- Section Home Three -->
