--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
-	<title>Pregnancy commit 28</title>
+	<title>Pregnancy commit 29</title>
 </head>
 <body>
 	<header>
@@ -47,9 +47,21 @@
 					</div>
 				</div>
 			</div>
+			<div class="full-content-image">
+				<img src="img/section-home-one-full-image.jpg">
+			</div>
 		</div>
-		<div class="full-content-image">
-			<img src="img/section-home-one-full-image.jpg">
+	</section>
+	<!-- Section Home Four -->
+	<section class="section section-home-four">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h4>"Lorem ipsum dolor sit amet, consecr adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes"</h4>
+					<h5>AMANDA RICHARDSON</h5>
+					<p>A Physician at “Fusce suscipit” Hospital. Cum sociis natoque penatibus et magnis dis parturient montes....</p>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Section Home Three -->
@@ -62,7 +74,9 @@
 						<div class="content-image">
 							<img src="http://via.placeholder.com/270x270">
 						</div>
-						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
@@ -72,7 +86,9 @@
 						<div class="content-image">
 							<img src="http://via.placeholder.com/270x270">
 						</div>
-						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
@@ -82,7 +98,9 @@
 						<div class="content-image">
 							<img src="http://via.placeholder.com/270x270">
 						</div>
-						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
@@ -92,22 +110,60 @@
 						<div class="content-image">
 							<img src="http://via.placeholder.com/270x270">
 						</div>
-						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</h3>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Section Home Four -->
-	<section class="section section-home-four">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-10 offset-md-1">
-					<h4> Lorem ipsum dolor sit amet, consecr adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes</h4>
-					<h5>AMANDA RICHARDSON</h5>
-					<p>A Physician at “Fusce suscipit” Hospital. Cum sociis natoque penatibus et magnis dis parturient montes....</p>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
+				</div>
+				<div class="col-md-3">
+					<article>
+						<div class="content-image">
+							<img src="http://via.placeholder.com/270x270">
+						</div>
+						<h3>
+							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
+						</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</article>
 				</div>
 			</div>
 		</div>
