--- a/index.html
+++ b/index.html
@@ -14,11 +14,41 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
-	<title>Pregnancy commit 31</title>
+	<title>Pregnancy commit 32</title>
 </head>
 <body>
 	<header>
 		<!--  Navigation -->
+		<div class="brand">
+			<div class="container">
+				<h1>
+					<a href="#">Pregnancy</a>
+				</h1>
+			</div>
+		</div>
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="#">Menú 1</a></li>
+						<li><a href="#">Menú 2</a></li>
+						<li><a href="#">Menú 3</a></li>
+						<li><a href="#">Menú 4</a></li>
+						<li><a href="#">Menú 5</a></li>
+						<li><a href="#">Menú 6</a></li>
+					</ul>
+				</div>
+		
+			</div>
+		</nav>
 	</header>
 
 	<!-- Section Home One -->
@@ -26,7 +56,7 @@
 		
 	</section>
 	<!-- Section Home Two -->
-	<section class="section section-home-two">
+	<section class="section-home-two">
 		<div class="container">
 			<h2>Welcome to our website!</h2>
 			<div class="row">
@@ -53,7 +83,7 @@
 		</div>
 	</section>
 	<!-- Section Home Four -->
-	<section class="section section-home-four">
+	<section class="section-home-four">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -65,7 +95,7 @@
 		</div>
 	</section>
 	<!-- Section Home Three -->
-	<section class="section section-home-three">
+	<section class="section-home-three">
 		<div class="container">
 			<h2>Latest from the blog</h2>
 			<div class="row">
@@ -168,6 +198,11 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		<div class="container">
+			<p>Pregnancy © 2018 Privacy policy. Terms of use</p>
+		</div>
+	</footer>
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
