--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
 	<link rel="preload" media="screen" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
+	<link href="css/plugins/camera.css" rel="stylesheet" media="screen">
 	<noscript>
     	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
@@ -14,7 +15,7 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
-	<title>Pregnancy commit 32</title>
+	<title>Pregnancy commit 33</title>
 </head>
 <body>
 	<header>
@@ -53,7 +54,23 @@
 
 	<!-- Section Home One -->
 	<section class="section-home-one">
-		
+		<div id="camera" class="camera-wrap">
+			<div data-src="images/index_slide01.jpg">
+				<div class="fadeIn camera_caption">
+				    <h2>Take care of yourself and the miracle inside you</h2>
+				</div>
+			</div>
+			<div data-src="images/index_slide02.jpg">
+				<div class="fadeIn camera_caption">
+				    <h2>Everything for your health and the health of your baby </h2>
+				</div>
+			</div>
+			<div data-src="images/index_slide03.jpg">
+				<div class="fadeIn camera_caption">
+				    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- Section Home Two -->
 	<section class="section-home-two">
@@ -206,5 +223,9 @@
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
+	<script type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
+	<script type='text/javascript' src='js/plugins/camera.min.js'></script> 
+	<script type='text/javascript' src='js/main.js'></script> 
 </body>
 </html>
