--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<noscript>
     	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
+ 	<link rel="preload" media="screen" as="style" href="css/plugins/camera.css" onload="this.rel='stylesheet'"/>
+	<noscript>
+    	<link href="css/plugins/camera.css" rel="stylesheet" media="screen">
+  	</noscript>
  	<link rel="preload" media="screen" as="style" href="css/style.css" onload="this.rel='stylesheet'"/>
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
@@ -22,7 +26,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy</a>
+					<a href="#">Pregnancy 38</a>
 				</h1>
 			</div>
 		</div>
