--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="Fixtel - Soluciones Portátiles">
-	<meta name="description" content="Servicio técnico especializado para celulares. Contamos con profesionales y equipos con la mas alta tecnología para dejar su móvil como nuevo">
+	<meta name="author" content="">
+	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
 	<link rel="preload" media="screen" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
@@ -18,7 +18,7 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
-	<title>Pregnancy commit 37</title>
+	<title>Pregnancy</title>
 </head>
 <body>
 	<header>
@@ -26,7 +26,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 38</a>
+					<a href="#">Pregnancy 39</a>
 				</h1>
 			</div>
 		</div>
@@ -57,23 +57,7 @@
 
 	<!-- Section Home One -->
 	<section class="section-home-one">
-        <div id="camera" class="camera-wrap">
-            <div data-src="images/index_slide01.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Take care of yourself and the miracle inside you</h2>
-                </div>
-            </div>
-            <div data-src="images/index_slide02.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything for your health and the health of your baby </h2>
-                </div>
-            </div>
-            <div data-src="images/index_slide03.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
-                </div>
-            </div>
-        </div>
+ 
 	</section>
 	<!-- Section Home Two -->
 	<section class="section-home-two">
