--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 39</a>
+					<a href="#">Pregnancy 40</a>
 				</h1>
 			</div>
 		</div>
@@ -57,7 +57,23 @@
 
 	<!-- Section Home One -->
 	<section class="section-home-one">
- 
+       <div id="camera" class="camera-wrap">
+            <div data-src="http://via.placeholder.com/1920x633">
+                <div class="fadeIn camera_caption">
+                    <h2>Take care of yourself and the miracle inside you</h2>
+                </div>
+            </div>
+            <div data-src="http://via.placeholder.com/1920x633">
+                <div class="fadeIn camera_caption">
+                    <h2>Everything for your health and the health of your baby </h2>
+                </div>
+            </div>
+            <div data-src="http://via.placeholder.com/1920x633">
+                <div class="fadeIn camera_caption">
+                    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
+                </div>
+            </div>
+        </div> 
 	</section>
 	<!-- Section Home Two -->
 	<section class="section-home-two">
