--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<noscript>
     	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
- 	<link rel="preload" media="screen" as="style" href="css/plugins/camera.css" onload="this.rel='stylesheet'"/>
+ 	<link rel="preload" media="screen" as="style" href="css/camera.css" onload="this.rel='stylesheet'"/>
 	<noscript>
-    	<link href="css/plugins/camera.css" rel="stylesheet" media="screen">
+    	<link href="css/camera.css" rel="stylesheet" media="screen">
   	</noscript>
  	<link rel="preload" media="screen" as="style" href="css/style.css" onload="this.rel='stylesheet'"/>
 	<noscript>
@@ -21,12 +21,13 @@
 	<title>Pregnancy</title>
 </head>
 <body>
+<div>
 	<header>
 		<!--  Navigation -->
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 40</a>
+					<a href="#">Pregnancy 41</a>
 				</h1>
 			</div>
 		</div>
@@ -54,7 +55,6 @@
 			</div>
 		</nav>
 	</header>
-
 	<!-- Section Home One -->
 	<section class="section-home-one">
        <div id="camera" class="camera-wrap">
@@ -63,18 +63,9 @@
                     <h2>Take care of yourself and the miracle inside you</h2>
                 </div>
             </div>
-            <div data-src="http://via.placeholder.com/1920x633">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything for your health and the health of your baby </h2>
-                </div>
-            </div>
-            <div data-src="http://via.placeholder.com/1920x633">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
-                </div>
-            </div>
         </div> 
 	</section>
+</div>
 	<!-- Section Home Two -->
 	<section class="section-home-two">
 		<div class="container">
