--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 43</a>
+					<a href="#">Pregnancy 44</a>
 				</h1>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 	<!-- Section Home One -->
 	<section class="section-home-one">
        <div id="camera" class="camera-wrap">
-            <div data-src="">
+            <div data-src="images/section-home-one-full-image.jpg">
                 <div class="fadeIn camera_caption">
                     <h2>Take care of yourself and the miracle inside you</h2>
                 </div>
