--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 44</a>
+					<a href="#">Pregnancy 45</a>
 				</h1>
 			</div>
 		</div>
@@ -216,10 +216,10 @@
 	</footer>
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
-	<script type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
-	<script type='text/javascript' src='js/plugins/camera.min.js'></script> 
-	<script type='text/javascript' src='js/main.js'></script> 
+	<script async src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script async type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
+	<script async type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
+	<script async type='text/javascript' src='js/plugins/camera.min.js'></script> 
+	<script async type='text/javascript' src='js/main.js'></script> 
 </body>
 </html>
