--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 46</a>
+					<a href="#">Pregnancy 47</a>
 				</h1>
 			</div>
 		</div>
@@ -58,12 +58,22 @@
 	<!-- Section Home One -->
 	<section class="section-home-one">
        <div id="camera" class="camera-wrap">
-            <div data-src="images/section-home-one-full-image.jpg">
+            <div data-src="images/index_slide01.jpg">
                 <div class="fadeIn camera_caption">
                     <h2>Take care of yourself and the miracle inside you</h2>
                 </div>
             </div>
-        </div> 
+            <div data-src="images/index_slide02.jpg">
+                <div class="fadeIn camera_caption">
+                    <h2>Everything for your health and the health of your baby </h2>
+                </div>
+            </div>
+            <div data-src="images/index_slide03.jpg">
+                <div class="fadeIn camera_caption">
+                    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
+                </div>
+            </div>
+        </div>
 	</section>
 </div>
 	<!-- Section Home Two -->
@@ -215,11 +225,11 @@
 		</div>
 	</footer>
 	<!-- Scripts Javascripts-->
-	<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script async src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script async type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
-	<script async type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
-	<script async type='text/javascript' src='js/plugins/camera.min.js'></script> 
-	<script async type='text/javascript' src='js/main.js'></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
+	<script type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
+	<script type='text/javascript' src='js/plugins/camera.min.js'></script> 
+	<script type='text/javascript' src='js/main.js'></script> 
 </body>
 </html>
