--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="images/favicon.png" rel="icon" type="image/png" />
-	<link rel="preload" media="screen" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
+	<link rel="preload" media="screen" as="style" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" onload="this.rel='stylesheet'"/>
 	<noscript>
-    	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
  	<link rel="preload" media="screen" as="style" href="css/camera.css" onload="this.rel='stylesheet'"/>
 	<noscript>
@@ -27,7 +27,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 47</a>
+					<a href="#">Pregnancy 48</a>
 				</h1>
 			</div>
 		</div>
@@ -57,18 +57,7 @@
 	</header>
 	<!-- Section Home One -->
 	<section class="section-home-one">
-       <div id="camera" class="camera-wrap">
-            <div data-src="images/index_slide02.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything for your health and the health of your baby </h2>
-                </div>
-            </div>
-            <div data-src="images/index_slide03.jpg">
-                <div class="fadeIn camera_caption">
-                    <h2>Everything you wanted to know about your health & fitness during pregnancy </h2>
-                </div>
-            </div>
-        </div>
+
 	</section>
 </div>
 	<!-- Section Home Two -->
@@ -221,10 +210,6 @@
 	</footer>
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type='text/javascript' src='js/plugins/jquery.mobile.customized.min.js'></script>
-	<script type='text/javascript' src='js/plugins/jquery.easing.1.3.js'></script> 
-	<script type='text/javascript' src='js/plugins/camera.min.js'></script> 
-	<script type='text/javascript' src='js/main.js'></script> 
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
