--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 48</a>
+					<a href="#">Pregnancy 49</a>
 				</h1>
 			</div>
 		</div>
@@ -57,7 +57,45 @@
 	</header>
 	<!-- Section Home One -->
 	<section class="section-home-one">
-
+        <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselFade" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselFade" data-slide-to="1"></li>
+                <li data-target="#carouselFade" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/index_slide01.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Somos Relsys</h1>
+                        <p class="fadeInUp wow animated" data-sppb-wow-delay="0.8s">Diseño, desarrollo web, alojamiento y publicidad en redes sociales</p>
+                        <div class="call-to-action">
+                            <a href="contacto.html" class="btn btn-primary btn-call-inverse">Cotiza tu servicio</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/index_slide02.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Soluciones adaptadas a sus necesidades</h1>
+                        <p class="fadeInUp wow animated" data-sppb-wow-delay="0.8s">Potenciamos la imagen de su empresa y su posición en las redes sociales</p>
+                        <div class="call-to-action">
+                            <a href="contacto.html" class="btn btn-primary btn-call-inverse">Cotiza tu servicio</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/index_slide03.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Diseño y desarrollo web</h1>
+                        <p class="fadeInUp wow animated" data-sppb-wow-delay="0.8s">Desarrollamos páginas web para elevar la presencia de su marca en internet</p>
+                        <div class="call-to-action fadeInUp">
+                            <a href="contacto.html" class="btn btn-primary btn-call-inverse">Cotiza tu servicio</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</section>
 </div>
 	<!-- Section Home Two -->
