--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	</section>
 </div>
 	<!-- Section Home Two -->
-	<section class="section-home-two">
+	<section class="section-home-two section-spacing">
 		<div class="container">
 			<h2>Welcome to our website!</h2>
 			<div class="row">
