--- a/home.html
+++ b/home.html
@@ -27,33 +27,39 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 49</a>
+					<a href="#">Pregnancy 50</a>
 				</h1>
 			</div>
 		</div>
-		<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li><a href="#">Menú 1</a></li>
-						<li><a href="#">Menú 2</a></li>
-						<li><a href="#">Menú 3</a></li>
-						<li><a href="#">Menú 4</a></li>
-						<li><a href="#">Menú 5</a></li>
-						<li><a href="#">Menú 6</a></li>
-					</ul>
-				</div>
-		
-			</div>
-		</nav>
+	    <nav class="navbar navbar-expand-lg fadeInDown animated">
+	        <div class="container">
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 6</a>
+	                    </li>            
+	                </ul>
+	            </div> 
+	        </div>
+	    </nav>
 	</header>
 	<!-- Section Home One -->
 	<section class="section-home-one">
@@ -67,31 +73,19 @@
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="images/index_slide01.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>Somos Relsys</h1>
-                        <p class="fadeInUp wow animated" data-sppb-wow-delay="0.8s">Diseño, desarrollo web, alojamiento y publicidad en redes sociales</p>
-                        <div class="call-to-action">
-                            <a href="contacto.html" class="btn btn-primary btn-call-inverse">Cotiza tu servicio</a>
-                        </div>
+                        <h1>Take care of yourself and the miracle inside you</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/index_slide02.jpg" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>Soluciones adaptadas a sus necesidades</h1>
-                        <p class="fadeInUp wow animated" data-sppb-wow-delay="0.8s">Potenciamos la imagen de su empresa y su posición en las redes sociales</p>
-                        <div class="call-to-action">
-                            <a href="contacto.html" class="btn btn-primary btn-call-inverse">Cotiza tu servicio</a>
-                        </div>
+						<h1>Everything for your health and the health of your baby</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/index_slide03.jpg" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>Diseño y desarrollo web</h1>
-                        <p class="fadeInUp wow animated" data-sppb-wow-delay="0.8s">Desarrollamos páginas web para elevar la presencia de su marca en internet</p>
-                        <div class="call-to-action fadeInUp">
-                            <a href="contacto.html" class="btn btn-primary btn-call-inverse">Cotiza tu servicio</a>
-                        </div>
+						<h1>Everything you wanted to know about your health & fitness during pregnancy</h1>
                     </div>
                 </div>
             </div>
