--- a/home.html
+++ b/home.html
@@ -18,6 +18,10 @@
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
   	</noscript>
+ 	<link rel="preload" media="screen" as="style" href="css/animate.css" onload="this.rel='stylesheet'"/>
+	<noscript>
+    	<link href="css/animate.css" rel="stylesheet" media="screen">
+  	</noscript>
 	<title>Pregnancy</title>
 </head>
 <body>
@@ -27,11 +31,11 @@
 		<div class="brand">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 50</a>
+					<a href="#">Pregnancy 51</a>
 				</h1>
 			</div>
 		</div>
-	    <nav class="navbar navbar-expand-lg fadeInDown animated">
+	    <nav id="navbar-menu" class="navbar navbar-expand-lg">
 	        <div class="container">
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
@@ -40,6 +44,35 @@
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
 	                        <a class="nav-link" href="#">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 6</a>
+	                    </li>            
+	                </ul>
+	            </div> 
+	        </div>
+	    </nav>
+	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-lg fadeInDown animated">
+	        <div class="container">
+	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="#">Menú 2</a>
 	                    </li>
 	                    <li class="nav-item">
 	                        <a class="nav-link" href="#">Menú 2</a>
@@ -72,19 +105,19 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="images/index_slide01.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
                         <h1>Take care of yourself and the miracle inside you</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/index_slide02.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything for your health and the health of your baby</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/index_slide03.jpg" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything you wanted to know about your health & fitness during pregnancy</h1>
                     </div>
                 </div>
@@ -105,7 +138,9 @@
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<a href="btn btn-primary">Leer Más</a>
+						<div class="call-to-action">
+							<a class="btn" href="#">Leer Más</a>
+						</div>
 					</article>
 				</div>
 				<div class="col-md-3">
@@ -139,7 +174,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -151,7 +191,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -163,7 +208,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -175,7 +225,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -187,7 +242,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -199,7 +259,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -211,7 +276,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -223,7 +293,12 @@
 				<div class="col-md-3">
 					<article>
 						<div class="content-image">
-							<img src="images/section-three-image.jpg">
+							<a href="#">
+								<img src="images/section-three-image.jpg">
+								<div class="content-description">
+									<img src="images/search.svg">
+								</div>
+							</a>
 						</div>
 						<h3>
 							<a href="#">Lorem ipsum dolor sit amet ipsum</a>
@@ -243,5 +318,7 @@
 	<!-- Scripts Javascripts-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<script src="js/plugins/wow.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
