--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 	<noscript>
     	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
- 	<link rel="preload" media="screen" as="style" href="css/camera.css" onload="this.rel='stylesheet'"/>
-	<noscript>
-    	<link href="css/camera.css" rel="stylesheet" media="screen">
-  	</noscript>
  	<link rel="preload" media="screen" as="style" href="css/style.css" onload="this.rel='stylesheet'"/>
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
@@ -27,19 +23,16 @@
 <body>
 	<header>
 		<!--  Navigation -->
-		<div class="brand d-none d-sm-block">
+		<div class="brand d-none d-md-block">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 53</a>
+					<a href="#">Pregnancy</a>
 				</h1>
 			</div>
 		</div>
-	    <nav id="navbar-menu" class="navbar navbar-expand-lg d-none d-sm-block">
+	    <nav id="navbar-menu" class="navbar navbar-expand-md d-none d-md-block">
 	        <div class="container">
-	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	                <span class="navbar-toggler-icon"></span>
-	            </button>
-	            <div class="collapse navbar-collapse" id="navbarNav">
+	        	<div class="navbar-nav-content">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
 	                        <a class="nav-link" href="menu.html">Menú 1</a>
@@ -60,15 +53,12 @@
 	                        <a class="nav-link" href="menu.html">Menú 6</a>
 	                    </li>            
 	                </ul>
-	            </div> 
+	        	</div>
 	        </div>
 	    </nav>
-	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-lg d-none d-sm-block fadeInDown animated">
+	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-md fadeInDown animated">
 	        <div class="container">
-	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	                <span class="navbar-toggler-icon"></span>
-	            </button>
-	            <div class="collapse navbar-collapse" id="navbarNav">
+	        	<div class="navbar-nav-content">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
 	                        <a class="nav-link" href="menu.html">Menú 1</a>
@@ -89,18 +79,16 @@
 	                        <a class="nav-link" href="menu.html">Menú 6</a>
 	                    </li>            
 	                </ul>
-	            </div> 
+	        	</div>
 	        </div>
 	    </nav>
 	    <!-- Navbar Mobile -->
-    	<nav id="navbar-mobile" class="navbar navbar-light navbar-expand-lg d-block d-sm-none">
+    	<nav id="navbar-mobile" class="navbar navbar-light d-block d-md-none">
         	<div class="container">
 	            <a class="navbar-brand" href="#">Pregnancy</a>
-
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
 	            </button>
-
  	            <div class="collapse navbar-collapse" id="navbarNav">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
@@ -136,22 +124,22 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-none d-sm-block w-100" src="images/index_slide01.jpg">
-                    <img class="d-block d-sm-none w-100" src="http://via.placeholder.com/576x500">
+                    <img class="d-none d-md-block w-100" src="images/index_slide01.jpg">
+                    <img class="d-block d-md-none w-100" src="http://via.placeholder.com/767x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
                         <h1>Take care of yourself and the miracle inside you</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-none d-sm-block w-100" src="images/index_slide02.jpg">
-                    <img class="d-block d-sm-none w-100" src="http://via.placeholder.com/576x500">
+                    <img class="d-none d-md-block w-100" src="images/index_slide02.jpg">
+                    <img class="d-block d-md-none w-100" src="http://via.placeholder.com/767x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything for your health and the health of your baby</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-none d-sm-block w-100" src="images/index_slide03.jpg">
-                    <img class="d-block d-sm-none w-100" src="http://via.placeholder.com/576x500">
+                    <img class="d-none d-md-block w-100" src="images/index_slide03.jpg">
+                    <img class="d-block d-md-none w-100" src="http://via.placeholder.com/767x500">
                     <div class="carousel-caption d-none d-md-block wow fadeInUp animated" data-sppb-wow-delay="0.8s">
 						<h1>Everything you wanted to know about your health & fitness during pregnancy</h1>
                     </div>
@@ -164,7 +152,7 @@
 		<div class="container">
 			<h2>Welcome to our website!</h2>
 			<div class="row">
-				<div class="col-12 col-md-8">
+				<div class="col-12 col-sm-12 col-md-8">
 					<article>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -179,13 +167,13 @@
 						</div>
 					</article>
 				</div>
-				<div class="col-12 col-md-4">
+				<div class="col-12 col-sm-12 col-md-4">
 					<div class="content-image">
 						<img src="http://via.placeholder.com/380x320">
 					</div>
 				</div>
 			</div>
-			<div class="d-none d-sm-block full-content-image">
+			<div class="d-none d-md-block full-content-image">
 				<img src="images/section-home-one-full-image.jpg">
 			</div>
 		</div>
@@ -194,7 +182,7 @@
 	<section class="section-home-four">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-12">
 					<h4>"Lorem ipsum dolor sit amet, consecr adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes"</h4>
 					<h5>AMANDA RICHARDSON</h5>
 					<p>A Physician at “Fusce suscipit” Hospital. Cum sociis natoque penatibus et magnis dis parturient montes....</p>
@@ -207,7 +195,7 @@
 		<div class="container">
 			<h2>Latest from the blog</h2>
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -224,7 +212,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -241,7 +229,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -258,7 +246,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -275,7 +263,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -292,7 +280,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -309,7 +297,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
@@ -326,7 +314,7 @@
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</article>
 				</div>
-				<div class="col-md-3">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 					<article>
 						<div class="content-image">
 							<a href="#">
