--- a/menu.html
+++ b/menu.html
@@ -10,10 +10,6 @@
 	<noscript>
     	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" media="screen">
   	</noscript>
- 	<link rel="preload" media="screen" as="style" href="css/camera.css" onload="this.rel='stylesheet'"/>
-	<noscript>
-    	<link href="css/camera.css" rel="stylesheet" media="screen">
-  	</noscript>
  	<link rel="preload" media="screen" as="style" href="css/style.css" onload="this.rel='stylesheet'"/>
 	<noscript>
     	<link href="css/style.css" rel="stylesheet" media="screen">
@@ -27,83 +23,108 @@
 <body>
 	<header>
 		<!--  Navigation -->
-		<div class="brand">
+		<div class="brand d-none d-md-block">
 			<div class="container">
 				<h1>
-					<a href="#">Pregnancy 52</a>
+					<a href="#">Pregnancy</a>
 				</h1>
 			</div>
 		</div>
-	    <nav id="navbar-menu" class="navbar navbar-expand-lg">
+	    <nav id="navbar-menu" class="navbar navbar-expand-md d-none d-md-block">
 	        <div class="container">
+	        	<div class="navbar-nav-content">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
+	                    </li>            
+	                </ul>
+	        	</div>
+	        </div>
+	    </nav>
+	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-md fadeInDown animated">
+	        <div class="container">
+	        	<div class="navbar-nav-content">
+	                <ul class="navbar-nav">
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
+	                    </li>               
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
+	                    </li>
+	                    <li class="nav-item">
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
+	                    </li>            
+	                </ul>
+	        	</div>
+	        </div>
+	    </nav>
+	    <!-- Navbar Mobile -->
+    	<nav id="navbar-mobile" class="navbar navbar-light d-block d-md-none">
+        	<div class="container">
+	            <a class="navbar-brand" href="#">Pregnancy</a>
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	                <span class="navbar-toggler-icon"></span>
 	            </button>
-	            <div class="collapse navbar-collapse" id="navbarNav">
+ 	            <div class="collapse navbar-collapse" id="navbarNav">
 	                <ul class="navbar-nav">
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 1</a>
+	                        <a class="nav-link" href="menu.html">Menú 1</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 2</a>
+	                        <a class="nav-link" href="menu.html">Menú 2</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 3</a>
+	                        <a class="nav-link" href="menu.html">Menú 3</a>
 	                    </li>               
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 4</a>
+	                        <a class="nav-link" href="menu.html">Menú 4</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 5</a>
+	                        <a class="nav-link" href="menu.html">Menú 5</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 6</a>
+	                        <a class="nav-link" href="menu.html">Menú 6</a>
 	                    </li>            
 	                </ul>
-	            </div> 
-	        </div>
-	    </nav>
-	    <nav id="navbar-top" class="navbar fixed-top navbar-expand-lg fadeInDown animated">
-	        <div class="container">
-	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	                <span class="navbar-toggler-icon"></span>
-	            </button>
-	            <div class="collapse navbar-collapse" id="navbarNav">
-	                <ul class="navbar-nav">
-	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 2</a>
-	                    </li>
-	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 2</a>
-	                    </li>
-	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 3</a>
-	                    </li>               
-	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 4</a>
-	                    </li>
-	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 5</a>
-	                    </li>
-	                    <li class="nav-item">
-	                        <a class="nav-link" href="#">Menú 6</a>
-	                    </li>            
-	                </ul>
-	            </div> 
-	        </div>
-	    </nav>
+	            </div>
+        	</div>
+    	</nav>
 	</header>
 	<!-- Section Menu One -->
 	<section class="section-menu-one">
 		<div class="container">
 			<h2>Looking good during pregnancy</h2>
 			<div class="row">
-				<div class="col-md-5">
+				<div class="col-md-5 d-none d-md-block">
 					<div class="content-image">
 						<img src="http://via.placeholder.com/440x360">
 					</div>
 				</div>
-				<div class="col-md-7">
+				<div class="col-12 col-sm-12 col-md-7">
 					<article>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. sed do eiusmod.</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -118,6 +139,11 @@
 						consequat.</p>
 					</article>
 				</div>
+				<div class="col-12 col-sm-12 col-md-5 d-block d-md-none">
+					<div class="content-image">
+						<img src="http://via.placeholder.com/440x360">
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -126,7 +152,7 @@
 		<div class="container">
 			<h2>Getting ready for baby</h2>
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-12 col-sm-12 col-md-8">
 					<article>
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua</h3>
@@ -143,7 +169,7 @@
 						</div>
 					</article>
 				</div>
-				<div class="col-md-4">
+				<div class="col-12 col-sm-12 col-md-4">
 					<div class="content-image">
 						<img src="http://via.placeholder.com/350x330">
 					</div>
